--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -2,9 +2,23 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>내 차를 부탁해</title>
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
-<body>
 
+<body>
+  
+  <div class="main"> 
+    <div class="menubar">
+        <h1>내 차를 부탁해</h1>
+    </div>  
+  </div>
+  
+  <div class="view">
+    <div>
+        <h1 class="viewtitle">팥죽이의 정보 입니다</h1>
+    </div>
+  </div>
+  
 </body>
 </html>
