--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>login</title>
-<!-- 외부 오픈 소스 CSS 라이브러리 사용하기  -->
 
 <link rel="stylesheet" 
 href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
 integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
  crossorigin="anonymous">
-<link rel="stylesheet" href="../css/login.css">
+<link rel="stylesheet" href="../css/join.css">
 
 </head>
 <body>
@@ -19,21 +18,36 @@ integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkz
  <section>
     <img id="car" src="../img/car.jpg" width="100%" height="100%">
   </section>
-  <loginForm>
-    <div id="preview">
+  <joinForm>
+  <div id="topText">회원가입</div>  
+    <div id="imgInput">
+      <img src="exam.png"><br>
+      <label for="fileInput">사진 등록</label>
+      <input type="file" id="fileInput">
+    </div>  
+    <div id="textInput">
       <div id="email">
-        email
+        Email : 
         <input id="input_email" type="text" size="15">
+        <button>중복체크</button>
+      </div>
+      <div id="nickName">
+        NickName : 
+        <input id="input_nickName" type="nickName" size="15">
       </div>
       <div id="password">
-        password
+        Password : 
         <input id="input_password" type="password" size="15">
       </div>
-      <div id="link">
-        <a href="">로그인</a> / <a href="join.html">회원가입</a>
+        <div id="password">
+        Password 확인 : 
+        <input id="input_password_confirm" type="password" size="15">
       </div>
     </div>
-  </loginForm>
+    <div id="button">
+      <button>가입</button> <button>취소</button>
+    </div>
+  </joinForm>
   <footer>
     <address>서울 서초구 비트 캠프</address>
   </footer>
