login.html, login.css, join.css 수정

--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -30,7 +30,7 @@ integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkz
         <input id="input_password" type="password" size="15">
       </div>
       <div id="link">
-        <a href="">로그인</a> / <a href="join.html">회원가입</a>
+        <a href="../main/main.html">로그인</a> / <a href="join.html">회원가입</a>
       </div>
     </div>
   </loginForm>
