메뉴바 뷰 분할 나누기 성공

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-  
-  <div class="main"> 
-    <div class="menubar">
-        <h1>내 차를 부탁해</h1>
-    </div>  
+    
+  <div class="menubar">
+    <div>
+        <p>내 차를 부탁해</p>
+    </div>
   </div>
   
   <div class="view">
     <div>
-        <h1 class="viewtitle">팥죽이의 정보 입니다</h1>
-    </div>
+      <p>팥죽이 입니다</p>
+    </div>  
   </div>
   
 </body>
