--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>login</title>
+<title>회원가입</title>
 
 <link rel="stylesheet" 
 href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
