--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -22,15 +22,13 @@ integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkz
   <loginForm>
     <div id="preview">
       <div id="email">
-        email
-        <input id="input_email" type="text" size="15">
+        <input id="input_email" type="text" size="15" placeholder="이메일">
       </div>
       <div id="password">
-        password
-        <input id="input_password" type="password" size="15">
+        <input id="input_password" type="password" size="15" placeholder="비밀번호">
       </div>
       <div id="link">
-        <a href="../main/main.html">로그인</a> / <a href="join.html">회원가입</a>
+        <a class="link" href="../main/main.html">로그인</a> / <a class="link" href="join.html">회원가입</a>
       </div>
     </div>
   </loginForm>
