--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -15,9 +15,32 @@
   </div>
   
   <div class="view">
-    <div>
-      <p>팥죽이 입니다</p>
-    </div>  
+    <div class="selectcar">
+      <select>
+        <option>팥죽이</option>
+        <option>팥빵이</option>
+        <option>일탈이</option>
+      </select>
+      <span>입니다</span> 
+    </div>
+    <div class="averoil">
+      <h2>ooo님의 연비 분석</h2>
+      <p>차종의 공인연비 대비 평균 연비를 보여드립니다.</p>
+    </div>
+    <div class="effi">
+      <h2>저번 주유 대비 효율 분석</h2>
+      <p>최저 -10%에서 최고 10%까지 효율을 개선해 보세요.</p>
+    </div>
+    <div class="buyoil">
+      <h2>최근 3개월 주유 금액 내역</h2>
+      <p>좌/우로 넘겨서 최근 3개월 기록을 확인할 수 있습니다.</p>
+    </div>
+    <div class="carcondition">
+      <div>
+        <h2>상태를 한 눈에 확인하세요.</h2>
+        <p>교체 시기가 다가오는 소모품을 확인하고 교체하세요.</p>
+     </div>
+    </div>
   </div>
   
 </body>
