--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -4,6 +4,36 @@
 <meta charset="UTF-8">
 <title>내 차를 부탁해</title>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/Nwagon.css" >
+<script src="../js/Nwagon.js"></script>
+
+<script>
+    var options = {
+    'legend':{
+    names: ['1', '2', '3', '4', '5', '6', '7', '8', '9', 
+    '10', '11', '12', '13', '14', '15',]
+    },
+    'dataset':{
+    title:'Playing time per day', 
+    values: [[56,76], [58,66], [60,62], [58,70], [85, 76],
+    [86,83], [82, 73], [77,66], [87,66], [49,56], [58,76], 
+    [85, 76], [56,83], [56, 83], [45, 34]],
+    colorset: ['#0072b2', '#cc79a7'],
+    fields:['Company A', 'Company B']
+    },
+    'chartDiv' : 'chart71',
+    'chartType' : 'line',
+    'leftOffsetValue': 40,
+    'bottomOffsetValue': 60,
+    'chartSize' : {width:700, height:300},
+    'minValue' :0,
+    'maxValue' : 100,
+    'increment' : 20,
+    'isGuideLineNeeded' : true //default set to false
+    };
+
+    Nwagon.chart(options);
+</script>
 </head>
 
 <body>
@@ -15,9 +45,35 @@
   </div>
   
   <div class="view">
-    <div>
-      <p>팥죽이 입니다</p>
-    </div>  
+    <div class="selectcar">
+      <select>
+        <option>팥죽이</option>
+        <option>팥빵이</option>
+        <option>일탈이</option>
+      </select>
+      <span>입니다</span> 
+    </div>
+    <div class="averoil">
+      <div id="chart71"></div>
+	   <p style = 'font-size:12px; padding:0 0 40px 40px'></p>
+	   
+      <h2>ooo님의 연비 분석</h2>
+      <p>차종의 공인연비 대비 평균 연비를 보여드립니다.</p>
+    </div>
+    <div class="effi">
+      <h2>저번 주유 대비 효율 분석</h2>
+      <p>최저 -10%에서 최고 10%까지 효율을 개선해 보세요.</p>
+    </div>
+    <div class="buyoil">
+      <h2>최근 3개월 주유 금액 내역</h2>
+      <p>좌/우로 넘겨서 최근 3개월 기록을 확인할 수 있습니다.</p>
+    </div>
+    <div class="carcondition">
+      <div>
+        <h2>상태를 한 눈에 확인하세요.</h2>
+        <p>교체 시기가 다가오는 소모품을 확인하고 교체하세요.</p>
+     </div>
+    </div>
   </div>
   
 </body>
