--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -9,16 +9,14 @@
 
 </head>
 <body>
-<div id="main" class="container">
- <header>
- </header> 
- <section>
+  <div id="main" class="container">
+  <section>
     <img id="car" src="../img/car.jpg" width="100%" height="100%">
   </section>
   <form class="form-inline">
     <div id="topText">회원가입</div>  
     <div id="imgInput">
-      <img src="exam.png"><br>
+      <img src="../img/exam.png" class="img-thumbnail"><br>
       <label for="fileInput">사진 등록</label>
       <input type="file" id="fileInput">
     </div>  
