수정합니다.

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -51,12 +51,14 @@
     </div>
     
     <div class="menuview">
-      <p>My Page</p>
-      <p>차량 등록</p>
-      <p>차량 관리</p>
-      <p>정비소</p>
-      <p>맞춤서비스</p>
-      <p>커뮤니티</p>
+      <ul>
+        <li><a href='#'><span>MyPage</span></a></li>
+        <li><a href='#'><span>차량등록</span></a></li>
+        <li><a href='#'><span>차량관리</span></a></li>
+        <li><a href='#'><span>정비소</span></a></li>
+        <li><a href='#'><span>맞춤서비스</span></a></li>
+        <li><a href='#'><span>커뮤니티</span></a></li>
+      </ul>
     </div>
     
     <div class="footerview">
