--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>login</title>
-
+<link rel="stylesheet" type="text/css" href="../css/example.css">
 <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="../css/login.css">
 
@@ -11,7 +11,6 @@
 <body>
   <div id="main" class="container">
   <section>
-    <img id="car" src="../img/car.jpg" width="100%" height="100%">
   </section>
   <form>
     <div id="preview" class="form-group">
@@ -33,5 +32,21 @@
   </div>
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
+  <script type="text/javascript" src="../js/background.cycle.js"></script>
+	<script type="text/javascript" src="../js/cycle.js"></script>
+  <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
