--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+  <header></header>
   <div id="main" class="container">
   <section>
   </section>
@@ -30,8 +31,10 @@
     </div>
   </form>
   </div>
+  <footer></footer>
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
+  
   <script type="text/javascript" src="../js/background.cycle.js"></script>
 	<script type="text/javascript" src="../js/cycle.js"></script>
   <script type="text/javascript">
@@ -46,7 +49,6 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
-</script>
+</script> 
 </body>
 </html>
