--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/Nwagon.css">
 <script src="../js/Nwagon.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="../js/liquidFillGauge.js"></script>
 <!-- 출렁이는 챠트 스타일 -->
 <style>
