--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -11,7 +11,6 @@
 <body>
   <div id="main" class="container">
   <section>
-    <img id="car" src="../img/car.jpg" width="100%" height="100%">
   </section>
   <div id="mainText">
     <p>오호라~<p>
@@ -47,7 +46,20 @@
   </div>
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
-  <script>
+  <script type="text/javascript" src="../js/background.cycle.js"></script>
+  <script type="text/javascript" src="../js/cycle.js"></script>
+  <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
   function go() {
   	window.location.href="login.html";
   }
