뒷배경 완성

--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -12,11 +12,24 @@
   <header></header>
   <div id="main" class="container">
   <section>
-  </section>
-  <div id="mainText">
+  <div id="mainText" class="cycle-slideshow" 
+    data-cycle-fx="fade" 
+    data-cycle-timeout="2000"
+    data-cycle-slides="> div"
+    >
+    <div>
+        <p>Lorem ipsum dolor</p>
+    </div>
+    <div>
+        <p>Mel eu pertinax</p>
+    </div>
+  <div >
     <p>오호라~<p>
     <p>우리들의 Car' Manager!!!<p>
   </div>
+</div>
+  </section>
+  
   <form id="login">
     <div id="preview" class="form-group">
       <div id="email">
@@ -40,6 +53,7 @@
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
   
   <script type="text/javascript" src="../js/background.cycle.js"></script>
+  <script type="text/javascript" src="../js/cycle2.js"></script>
   <script type="text/javascript" src="../js/cycle.js"></script>
   <script type="text/javascript">
 
