--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -11,11 +11,22 @@
 <body>
   <div id="main" class="container">
   <section>
-  </section>
-  <div id="mainText">
+    <div id="mainText" class="cycle-slideshow" 
+    data-cycle-fx="fade" 
+    data-cycle-timeout="2000"
+    data-cycle-slides="> div">
+    <div>
+        <p>Lorem ipsum dolor</p>
+    </div>
+    <div>
+        <p>Mel eu pertinax</p>
+    </div>
+  <div >
     <p>오호라~<p>
     <p>우리들의 Car' Manager!!!<p>
   </div>
+</div>
+  </section>
   <form id="join" class="form-inline">
     <div id="topText">회원가입</div>  
     <div id="imgInput">
@@ -47,22 +58,23 @@
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
   <script type="text/javascript" src="../js/background.cycle.js"></script>
+  <script type="text/javascript" src="../js/cycle2.js"></script>
   <script type="text/javascript" src="../js/cycle.js"></script>
   <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36251023-1']);
-  _gaq.push(['_setDomainName', 'jqueryscript.net']);
-  _gaq.push(['_trackPageview']);
+	  var _gaq = _gaq || [];
+  	_gaq.push(['_setAccount', 'UA-36251023-1']);
+  	_gaq.push(['_setDomainName', 'jqueryscript.net']);
+  	_gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-  function go() {
-  	window.location.href="login.html";
-  }
+  	(function() {
+   	 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+   	 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  	})();
+  	function go() {
+  		window.location.href="login.html";
+  	}
   </script>
 </body>
 </html>
