--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+<header></header>
   <div id="main" class="container">
   <section>
     <div id="mainText" class="cycle-slideshow" 
@@ -55,6 +56,7 @@
     </div>
   </form>
   </div>
+  <footer></footer>
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
   <script type="text/javascript" src="../js/background.cycle.js"></script>
