로그인 및 회원가입 폼에 반투명 div 추가

--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -28,6 +28,7 @@
 </div>
   <section>
   </section>
+  <form id="null"></form>
   <form id="join" class="form-inline">
     <div id="topText">회원가입</div>  
     <div id="imgInput">
