--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -29,6 +29,7 @@
 </div>
   <section>
   </section>
+  <form id="null"></form>
   <form id="login">
     <div id="preview" class="form-group">
       <div id="email">
