추가변경은 없음..

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -27,8 +27,8 @@
       <div class="userinfoview">
         <span>안녕하세요.  </span>
         <span>dain@test.com</span>
-        <span>님</span>
-        <p>로그아웃</p>
+        <span>님</span><br>
+        <p><a href="../auth/login.html">로그아웃</a></p>
       </div>
     </div>
     
