로그인페이지 텍스트 수정 및 메인페이지 작업중... ㅠㅠ

--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -16,16 +16,19 @@
     data-cycle-timeout="2000"
     data-cycle-slides="> div">
     <div>
-        <p>Lorem ipsum dolor</p>
+        <p>지금</p><p class="intext">'이 순간'</p>
+        <p>내 차를 부탁해</p>
     </div>
     <div>
-        <p>Mel eu pertinax</p>
+        <p>지금</p><p class="intext"> '여기에'</p>
+        <p>내 차를 부탁해</p>
     </div>
-  <div >
-    <p>오호라~<p>
-    <p>우리들의 Car' Manager!!!<p>
+    <div>
+      <p>당신 + </p><p class="intext">'자동차'<p>
+      <p>= 내 차를 부탁해<p>
+    </div>
   </div>
-</div>
+<!--</div> 이거 잘못 넣음;;; 지워도 됨 -->
   <section>
   </section>
   <form id="null"></form>
