--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -14,10 +14,15 @@
 <style>
 .liquidFillGaugeText { font-family: Helvetica; font-weight: bold; }
 </style>
-
+<!-- 메인 이미지 바뀌는 효과 -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" href="../js/nivo-slider.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../js/jquery.nivo.slider.js"></script>
+
+<!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+<!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
+
 </head>
 
 <body>
@@ -107,9 +112,8 @@
         <script language="JavaScript" src="../js/chart.js"></script>
     </div>
     <div class="viewintitle">
-      <h2>차량 관리 상태를 한 눈에 보여드립니다.</h2>
-      <p>집 다음으로 가장 비싸게 구입하는 자동차<br>소중하게 관리하세요.
-      <br>간편한 등록과 번거로움을 최소화 했습니다.<br>지금 시작하세요!</p>
+      <h2 class="titlemsg">차량 관리 상태를 한 눈에 보여드립니다.</h2>
+      <p class="titlemsg">번거로움 최소화한 간편한 이용<br>지금 시작하세요!</p>
     </div>
     <div class="viewinslide">
       <div id="slider" class="nivoSlider"> 
