--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -14,19 +14,20 @@
   <div id="mainText" class="cycle-slideshow" 
     data-cycle-fx="fade" 
     data-cycle-timeout="2000"
-    data-cycle-slides="> div"
-    >
+    data-cycle-slides="> div">
     <div>
-        <p>Lorem ipsum dolor</p>
+        <p>지금</p><p class="intext">'이 순간'</p>
+        <p>내 차를 부탁해</p>
     </div>
     <div>
-        <p>Mel eu pertinax</p>
+        <p>지금</p><p class="intext"> '여기에'</p>
+        <p>내 차를 부탁해</p>
     </div>
-  <div >
-    <p>오호라~<p>
-    <p>우리들의 Car' Manager!!!<p>
+    <div>
+      <p>당신 + </p><p class="intext">'자동차'<p>
+      <p>= 내 차를 부탁해<p>
+    </div>
   </div>
-</div>
   <section>
   </section>
   <form id="null"></form>
