메인페이지 자동차 이미지 수정.. 구현방법 못찾음 ㅠㅠ

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -102,7 +102,7 @@
     </div>
     <div class="effi">
       <h2>저번 주유 대비 효율 분석</h2>
-      <p>최저 -10%에서 최고 10%까지 효율을 개선해 보세요.</p>
+      <p>0%에서 최고 10%까지 효율을 개선해 보세요.</p>
         <svg id="fillgauge1" width="0%" height="0" onclick="gauge1.update(NewValue());"></svg>
         <svg id="fillgauge2" width="0%" height="0" onclick="gauge2.update(NewValue());"></svg>
         <svg id="fillgauge3" width="0%" height="0" onclick="gauge3.update(NewValue());"></svg>
@@ -188,7 +188,8 @@
         <p>교체 시기가 다가오는 소모품을 확인하고 교체하세요.</p>
      </div>
      <div>
-        <img src="../img/maincar_green.png">
+        <img src="../img/car_condition.png">
+        <img src="../img/car_condition911.png">
      </div>
     </div>
   </div>
