로그인 페이지 원상복귀

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -26,11 +26,12 @@
 </head>
 
 <body>
-    
+  
+  <!-- 메뉴 바 작업 start -->
   <div class="menubar">
     <div class="logowrapper">
       <div class="logoview">
-        <p>내 차를 부탁해</p>
+        <a href="../main/main.html"><img src="../img/logo.jpeg" class="logo"/></a>
       </div>
     </div>
     
@@ -62,6 +63,8 @@
       </div>
     </div>
   </div>
+  <!-- 메뉴바 작업 end -->
+  
   
   <div class="view">
     <div class="selectcar">
