--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -119,7 +119,7 @@
         <svg id="fillgauge2" width="0%" height="0" onclick="gauge2.update(NewValue());"></svg>
         <svg id="fillgauge3" width="0%" height="0" onclick="gauge3.update(NewValue());"></svg>
         <svg id="fillgauge4" width="0%" height="0" onclick="gauge4.update(NewValue());"></svg>
-        <svg id="fillgauge5" width="97%" height="250"></svg>
+        <svg id="fillgauge5" width="350" height="270"></svg>
         <svg id="fillgauge6" width="0%" height="0" onclick="gauge6.update(NewValue());"></svg>
         <script language="JavaScript" src="../js/chart.js"></script>
     </div>
