로그인 페이지 이미지 작업완료

--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <header></header>
+  <!-- <header></header> -->
   <div id="main" class="container">
   <div id="mainText" class="cycle-slideshow" 
     data-cycle-fx="fade" 
@@ -49,7 +49,7 @@
     </div>
   </form>
   </div>
-  <footer></footer>
+  <!-- <footer></footer> -->
   <script type="text/javascript" src="login.js"></script>
   <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
   
