상단 구분선 추가

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -77,12 +77,15 @@
   
   
   <div class="view">
-    <div id="select_container" class="selectcar">
-      <select class="m_select select01">
-        <option value="">팥죽이</option>
-        <option value="">팥빵이</option>
-        <option value="">일탈이</option>
-      </select>
+    <div class="carbox">
+        <!--<h2>등록된 차를 골라보세요.</h2>-->
+        <div id="select_container" class="selectcar">
+        <select class="m_select select01">
+            <option value="">팥죽이</option>
+            <option value="">팥빵이</option>
+            <option value="">일탈이</option>
+        </select>
+        </div>
     </div>
     <div class="averoil">
       <h2>ooo님의 연비 분석</h2>
@@ -124,7 +127,7 @@
         <script language="JavaScript" src="../js/chart.js"></script>
     </div>
     <div class="viewintitle">
-      <h2 class="titlemsg">차량 관리 상태를 한 눈에 보여드립니다.</h2>
+      <h2 class="titlemsg">차량 관리 상태를 한 눈에 보여드립니다.</h2><br><br><br>
       <p class="titlemsg">번거로움 최소화한 간편한 이용<br>지금 시작하세요!</p>
     </div>
     <div class="viewinslide">
