login.html 수정중... 1. auth 폴더 정리 2. font 폴더 추가 및 파일 추가 3. 필요한 js 및 css 추가

--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -61,8 +61,8 @@
   </form>
   </div>
   <footer></footer>
-  <script type="text/javascript" src="login.js"></script>
-  <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
+  <script type="text/javascript" src="../js/login.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/background.cycle.js"></script>
   <script type="text/javascript" src="../js/cycle2.js"></script>
   <script type="text/javascript" src="../js/cycle.js"></script>
