--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>login</title>
-<link rel="stylesheet" type="text/css" href="../css/example.css">
 <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="../css/example.css">
 <link rel="stylesheet" href="../css/login.css">
+<link rel="stylesheet" href="../css/demo.css">
+<link rel="stylesheet" href="../css/font-awesome.css">
+<link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -31,7 +34,7 @@
   <section>
   </section>
   <form id="null"></form>
-  <form id="login">
+  <!--<form id="login">
     <div id="preview" class="form-group">
       <div id="email">
         <input id="input_email" class="form-control" type="text" placeholder="이메일">
@@ -47,15 +50,34 @@
         <a class="link" href="../main/main.html">로그인</a> /&nbsp <a class="link" href="join.html"> 회원가입</a>
       </div> 
     </div>
+  </form>-->
+  <form class="form-3">
+    <p class="clearfix">
+        <label for="login">Username</label>
+        <input type="text" name="login" id="login" placeholder="Username">
+    </p>
+    <p class="clearfix">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" placeholder="Password"> 
+    </p>
+    <p class="clearfix">
+        <input type="checkbox" name="remember" id="remember">
+        <label for="remember">Remember me</label>
+    </p>
+    <p class="clearfix">
+        <input type="submit" name="submit" value="Sign in">
+    </p>       
   </form>
+  
   </div>
   <footer></footer>
-  <script type="text/javascript" src="login.js"></script>
-  <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
-  
+  <script type="text/javascript" src="../js/login.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/background.cycle.js"></script>
   <script type="text/javascript" src="../js/cycle2.js"></script>
   <script type="text/javascript" src="../js/cycle.js"></script>
+  <script type="text/javascript" src="../js/jquery.placeholder.min.js"></script>
+  <script type="text/javascript" src="../js/modernizr.custom.63321.js"></script>
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
