--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -78,6 +78,7 @@
   
   <div class="view">
     <div class="carbox">
+     <img src="../img/maintop_h.png">
         <!--<h2>등록된 차를 골라보세요.</h2>-->
         <div id="select_container" class="selectcar">
         <select class="m_select select01">
