메인 화면 이미지 추가 차트 위치 수정

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -84,7 +84,7 @@
   
   <div class="view">
     <div class="carbox">
-     <img src="../img/maintop_h.png">
+     <img src="../img/maintop_c.png">
         <!--<h2>등록된 차를 골라보세요.</h2>-->
         <div id="select_container" class="selectcar">
         <select class="m_select select01">
