--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -32,14 +32,14 @@
   <form id="null"></form>
   
   <form class="form-4">
-    <h1>로그인</h1>
+    <div id="topText">로그인</div> 
     <p>
         <label for="login">Email</label>
-        <input type="text" name="login" placeholder="Email" required>
+        <input type="text" name="login" placeholder="이메일" required>
     </p>
     <p>
         <label for="password">Password</label>
-        <input type="password" name='password' placeholder="Password" required> 
+        <input type="password" name='password' placeholder="비밀번호" required> 
     </p>
 
     <div>
@@ -53,7 +53,7 @@
     <p></p>
 
     <p>
-      <input type="button" value="Log-in" onclick="goMain()">
+      <input type="button" value="로그인" onclick="goMain()">
     </p>       
   </form>
   
