로그인 페이지 수정

--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -8,8 +8,15 @@
   <link rel="stylesheet" href="../css/join.css">
 </head>
 <body>
-  <header></header>
   <div id="main" class="container">
+      <div id="gallery" class="cycle-slideshow" 
+    data-cycle-slides="div" 
+    data-cycle-auto-height="16:9"
+    >
+    <div style="background-image:url(../img/image003.jpg)"></div>
+    <div style="background-image:url(../img/image002.jpg)"></div>
+    <div style="background-image:url(../img/image020.jpeg)"></div>
+</div>
     <div id="mainText" class="cycle-slideshow" 
       data-cycle-fx="fade" 
       data-cycle-timeout="2000"
