로그인 페이지 글자 수정완료(향후 아이콘 추가 예정)

--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -37,8 +37,8 @@
   </div>
   <form id="null"></form>
   <form class="form-4">
-    <div id="topText">내 차를 부탁해 시작하기</div>
-    <p>회원이라면 지금 들어오세요.</p> 
+    <div id="topText"><span id="textMycar">내 차를 부탁해</span> 시작하기</div>
+    <p>회원이라면 <span id="now">지금</span> 들어오세요.</p> 
     <p>
         <label for="login">Email</label>
         <input type="text" name="login" placeholder="이메일" required>
