--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -39,7 +39,8 @@
     <form id="null"></form>
   
     <form class="input">
-      <div id="topText">회원가입</div>  
+      <div id="topText">이메일 하나로 <span id="now">간편하게</span> 시작하세요!</div>
+      <p>다른 정보는 받지 않습니다. 부담 없이 이용하세요.</p>  
       <div id="imgInput">
         <img src="../img/exam.png" class="img-thumbnail"><br>
         <label for="fileInput">사진 등록</label>
