소스코드 정리

--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -102,7 +102,7 @@ $(window).load(function(){
       <div class="carbox">      
         <img src="../img/maintop_c.png">
      
-        <!-- 메뉴바 관련 버튼 -->   
+        <!-- 메뉴바 버튼 관련 -->   
         <div class="main-content">
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
