--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>내 차를 부탁해</title>
 
-<link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/main/main.css">
 <!-- 나눔차트 라이브러리 -->
-<link rel="stylesheet" type="text/css" href="../css/Nwagon.css">
+<link rel="stylesheet" type="text/css" href="../css/main/Nwagon.css">
 
 
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> 
@@ -37,22 +37,22 @@ $(window).load(function(){
     });
 </script>
 
-<script src="../js/Nwagon.js"></script>
+<script src="../js/main/Nwagon.js"></script>
 <!-- D3.js 라이브러리 -->
 <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
-<script src="../js/liquidFillGauge.js" language="JavaScript"></script>
+<script src="../js/main/liquidFillGauge.js" language="JavaScript"></script>
 <!-- 출렁이는 차트 스타일 -->
 <style>
 .liquidFillGaugeText { font-family: Helvetica; font-weight: bold; }
 </style>
 <!-- 메인 이미지 바뀌는 효과 -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<link rel="stylesheet" href="../js/nivo-slider.css" type="text/css" media="screen" />
-<script type="text/javascript" src="../js/jquery.nivo.slider.js"></script>
+<link rel="stylesheet" href="../js/main/nivo-slider.css" type="text/css" media="screen" />
+<script type="text/javascript" src="../js/main/jquery.nivo.slider.js"></script>
 
 <!-- select 박스 효과 -->
-<script src="../js/jquery.jqtransform.js"></script>
-<link rel="stylesheet" type="text/css" href="../css/jqtransform.css" />
+<script src="../js/main/jquery.jqtransform.js"></script>
+<link rel="stylesheet" type="text/css" href="../css/main/jqtransform.css" />
 
 <script type="text/javascript">
   $(function(){
@@ -168,7 +168,7 @@ $(window).load(function(){
       <svg id="fillgauge4" width="0%" height="0" onclick="gauge4.update(NewValue());"></svg>
       <svg id="fillgauge5" width="350" height="270"></svg>
       <svg id="fillgauge6" width="0%" height="0" onclick="gauge6.update(NewValue());"></svg>    
-      <script language="JavaScript" src="../js/chart.js"></script>
+      <script language="JavaScript" src="../js/main/chart.js"></script>
     </div>
     
     <!-- 홍보용 멘트 영역 -->
