--- a/carmanager/src/main/webapp/auth/join.html
+++ b/carmanager/src/main/webapp/auth/join.html
@@ -5,7 +5,7 @@
   <title>회원가입</title>
 
   <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="../css/join.css">
+  <link rel="stylesheet" href="../css/auth/join.css">
 </head>
 <body>
   <div id="main" class="container">
@@ -13,9 +13,9 @@
     data-cycle-slides="div" 
     data-cycle-auto-height="16:9"
     >
-    <div style="background-image:url(../img/image003.jpg)"></div>
-    <div style="background-image:url(../img/image002.jpg)"></div>
-    <div style="background-image:url(../img/image020.jpeg)"></div>
+    <div style="background-image:url(../img/auth/image003.jpg)"></div>
+    <div style="background-image:url(../img/auth/image002.jpg)"></div>
+    <div style="background-image:url(../img/auth/image020.jpeg)"></div>
 </div>
     <div id="mainText" class="cycle-slideshow" 
       data-cycle-fx="fade" 
@@ -42,7 +42,7 @@
       <div id="topText">이메일 하나로 <span id="now">간편하게</span> 시작하세요!</div>
       <p>다른 정보는 받지 않습니다. 부담 없이 이용하세요.</p>  
       <div id="imgInput">
-        <img src="../img/exam.png" class="img-thumbnail"><br>
+        <img src="../img/auth/exam.png" class="img-thumbnail"><br>
         <label for="fileInput">사진 등록</label>
         <input type="file" id="fileInput">
       </div>
@@ -75,11 +75,11 @@
     </form>
   </div>
   
-  <script type="text/javascript" src="../js/login.js"></script>
+  <script type="text/javascript" src="../js/auth/login.js"></script>
   <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/cycle2.js"></script>
-  <script type="text/javascript" src="../js/jquery.placeholder.min.js"></script>
-  <script type="text/javascript" src="../js/modernizr.custom.63321.js"></script>
+  <script type="text/javascript" src="../js/auth/cycle2.js"></script>
+  <script type="text/javascript" src="../js/auth/jquery.placeholder.min.js"></script>
+  <script type="text/javascript" src="../js/auth/modernizr.custom.63321.js"></script>
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
