--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>login</title>
 <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
-<link rel="stylesheet" href="../css/login.css">
+<link rel="stylesheet" href="../css/auth/login.css">
 
 </head>
 
@@ -14,9 +14,9 @@
     data-cycle-slides="div" 
     data-cycle-auto-height="16:9"
     >
-    <div style="background-image:url(../img/image003.jpg)"></div>
-    <div style="background-image:url(../img/image002.jpg)"></div>
-    <div style="background-image:url(../img/image020.jpeg)"></div>
+    <div style="background-image:url(../img/auth/image003.jpg)"></div>
+    <div style="background-image:url(../img/auth/image002.jpg)"></div>
+    <div style="background-image:url(../img/auth/image020.jpeg)"></div>
 </div>
   <div id="mainText" class="cycle-slideshow" 
     data-cycle-fx="fade" 
@@ -65,9 +65,9 @@
   
   </div>
   <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/cycle2.js"></script>
-  <script type="text/javascript" src="../js/jquery.placeholder.min.js"></script>
-  <script type="text/javascript" src="../js/modernizr.custom.63321.js"></script>
+  <script type="text/javascript" src="../js/auth/cycle2.js"></script>
+  <script type="text/javascript" src="../js/auth/jquery.placeholder.min.js"></script>
+  <script type="text/javascript" src="../js/auth/modernizr.custom.63321.js"></script>
   <script type="text/javascript">
   function goMain() {
   		window.location.href="../main/main.html";
