--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -64,7 +64,7 @@
   </form>
   
   </div>
-  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../lib/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="../js/auth/cycle2.js"></script>
   <script type="text/javascript" src="../js/auth/jquery.placeholder.min.js"></script>
   <script type="text/javascript" src="../js/auth/modernizr.custom.63321.js"></script>
