--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -140,7 +140,7 @@ $(window).load(function(){
                 'legend':{names: ['1', '2', '3', '4', '5', '6', '7', '8']},
                 'dataset':{
                     title:'개인연비 per 공인연비', 
-                    values: [[14,16], [17,16], [12,16], [11,16], [9,16], [20,16], [18,16], [18,16]],
+                    values: [[14,16], [17,16], [12,16], [11,16], [9,16], [20,16], [18,16]],
                     colorset: ['#0072b2', '#cc79a7'],
                     fields:['개인연비', '공인연비']
                 },
