--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -121,9 +121,11 @@ $(window).load(function(){
       <div id="select_container" class="selectcar">
       
         <select id="myCarList" class="m_select select01">
+        <!-- 
             <option value="">팥죽이</option>
             <option value="">팥빵이</option>
             <option value="">일탈이</option>
+				 -->
        </select>
       </div>
       
@@ -219,8 +221,10 @@ $(window).load(function(){
   </div> <!-- container end -->
 <script>
 <!-- 연비 분석 관련 스크립트 -->
-//var selectcar = $("#myCarList")
-//$("")
+var selectcar = $("#myCarList")
+$("<option>").html("팥죽이").appendTo(selectcar);
+$("<option>").html("팥빵이").appendTo(selectcar);
+$("<option>").html("일탈이").appendTo(selectcar);
 //<option value="">팥죽이</option>
 //<option value="">팥빵이</option>
 //<option value="">일탈이</option>
