--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -219,7 +219,7 @@ $(window).load(function(){
   </div> <!-- container end -->
 <script>
 <!-- 연비 분석 관련 스크립트 -->
-$.getJSON('main/list.do', function(resultObj) {
+$.getJSON('/list.do', function(resultObj) {
   alert("하하하하");
 });
 var selectcar = $("#myCarList")
