--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -219,13 +219,13 @@ $(window).load(function(){
   </div> <!-- container end -->
 <script>
 <!-- 연비 분석 관련 스크립트 -->
-$.getJSON('/list.do', function(resultObj) {
-  alert("하하하하");
-});
+$.getJSON('list.do', function(resultObj) {
 var selectcar = $("#myCarList")
 $("<option>").html("팥죽이").appendTo(selectcar);
 $("<option>").html("팥빵이").appendTo(selectcar);
 $("<option>").html("일탈이").appendTo(selectcar);
+ 
+});
 var options = {
      'legend':{names: ['01-03', '01-03', '01-03', '01-03', '01-03', '01-03', '01-03', '01-03']},
      'dataset':{
