--- a/carmanager/src/main/webapp/main/main.html
+++ b/carmanager/src/main/webapp/main/main.html
@@ -220,22 +220,15 @@ $(window).load(function(){
   </div> <!-- container end -->
 <script>
 <!-- 연비 분석 관련 스크립트 -->
-$.getJSON('list.do', function(resultObj) {
-  alert("들어옴?");
 var selectcar = $("#myCarList");
+$.getJSON('list.do', function(resultObj) {
+//  alert("들어옴?");
 for (var garage of resultObj.data) {
-   /* alert(garage.nickName); */
-   $("<option>").html( + garage.nickName + ).appendTo(selectcar);
+//  alert(garage.nickName);
+$("<option>").html(garage.nickName).appendTo(selectcar);
 }
+});
 
-});
-var selectcar = $("#myCarList")
-$("<option>").html("팥죽이").appendTo(selectcar);
-$("<option>").html("팥빵이").appendTo(selectcar);
-$("<option>").html("일탈이").appendTo(selectcar);
->>>>>>> d362c525c26a9322e8b0b6f64c433999c9054579
- 
-});
 var options = {
      'legend':{names: ['01-03', '01-03', '01-03', '01-03', '01-03', '01-03', '01-03', '01-03']},
      'dataset':{
