--- a/carmanager/src/main/webapp/auth/login.html
+++ b/carmanager/src/main/webapp/auth/login.html
@@ -17,7 +17,8 @@
     <div style="background-image:url(../img/auth/image003.jpg)"></div>
     <div style="background-image:url(../img/auth/image002.jpg)"></div>
     <div style="background-image:url(../img/auth/image020.jpeg)"></div>
-</div>
+  </div>
+  
   <div id="mainText" class="cycle-slideshow" 
     data-cycle-fx="fade" 
     data-cycle-timeout="2000"
@@ -35,17 +36,18 @@
       <p>= 내 차를 부탁해<p>
     </div>
   </div>
+  
   <form id="null"></form>
   <form class="form-4" method="POST">
     <div id="topText"><span id="textMycar">내 차를 부탁해</span> 시작하기</div>
     <p>회원이라면 <span id="now">지금</span> 들어오세요.</p> 
     <p>
         <label for="login">Email</label>
-        <input type="text" name="login" placeholder="이메일" required id="femail">
+        <input type="text" name="login" placeholder="이메일" id="femail" required>
     </p>
     <p>
         <label for="password">Password</label>
-        <input type="password" name='password' placeholder="비밀번호" required id="fpassword"> 
+        <input type="password" name='password' placeholder="비밀번호" id="fpassword" required> 
     </p>
 
     <div>
@@ -68,9 +70,7 @@
   <script type="text/javascript" src="../js/auth/cycle2.js"></script>
   <script type="text/javascript" src="../js/auth/jquery.placeholder.min.js"></script>
   <script type="text/javascript" src="../js/auth/modernizr.custom.63321.js"></script>
-  <script type="text/javascript">
-  
-</script> 
+  <script type="text/javascript"></script> 
 
 <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
 <script>
@@ -83,11 +83,13 @@ $('#loginBtn').click(function(event) {
 		var ajaxResult = resultObj.ajaxResult;
 		if (ajaxResult.status == "success") {
       location.href = "../main/main.html";
+		} 
 	}, 'json');
 });
 
-$("[name=login]").attr("requried", true);
+/* $("[name=login]").attr("requried", true);
 $("[name=password]").attr("requried", true);
+*/
 /*
 $('#loginBtn').click(function(event) {
 	$.post('localhost:8080/carmanager/main/main.do', {
